--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "emoji-regex": "^8.0.0",
     "escalade": "^3.2.0",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "get-caller-file": "^2.0.5",
     "has-flag": "^4.0.0",
     "is-fullwidth-code-point": "^3.0.0",
