--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
     "bcryptjs": "^3.0.2",
