--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/material": "^7.3.6",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "chalk": "^4.1.2",
     "cheerio": "^1.1.2",
@@ -44,6 +45,7 @@
     "is-fullwidth-code-point": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
@@ -57,6 +59,7 @@
     "tree-kill": "^1.2.2",
     "tslib": "^2.8.1",
     "wrap-ansi": "^7.0.0",
+    "xlsx": "^0.18.5",
     "y18n": "^5.0.8",
     "yargs": "^17.7.2",
     "yargs-parser": "^21.1.1"
